[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/jobs/jobs.gd" type="Script" id=1]

[node name="job" type="HBoxContainer"]
anchor_right = 1.12695
anchor_bottom = 1.02604
margin_right = -921.0
margin_bottom = -758.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="minus" type="Button" parent="."]
margin_right = 17.0
margin_bottom = 30.0
text = "-"

[node name="job_label" type="Label" parent="."]
margin_left = 21.0
margin_right = 141.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "{{ Job Label }}"
align = 1
valign = 1

[node name="job_occupancy" type="Label" parent="."]
margin_left = 145.0
margin_right = 175.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "0"
align = 1
valign = 1

[node name="job_occupancy_max" type="Label" parent="."]
margin_left = 179.0
margin_right = 209.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "9"
align = 1
valign = 1

[node name="plus" type="Button" parent="."]
margin_left = 213.0
margin_right = 233.0
margin_bottom = 30.0
text = "+"

[connection signal="pressed" from="minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="plus" to="." method="_on_plus_pressed"]
